@@ -3,6 +3,8 @@ $Rev$
 EditorFactory.py    Add FNB.FNB_DROPDOWN_TABS_LIST style to EditorCtrl
 Entry.py            Using new SetFocus method of meide
 dynamicmenu.py      Fix editor shortcuts key caption error
+mako_plugin/dirbrowserext.py makotmp.acp
+                    Fix mako tag auto complete bug #issue 14
 
 [2008/01/09]
 ShellWindow.py      Fix popup menu creation too late, so the UpdateUI will raise exception
